# ElephantToolbox

./: CHANGELOG.md  LICENSE  README.md  building.md  pyproject.toml  requirements.txt  toolbox_cli.py
docs/: ARCHITECTURE.md  MIGRATION_MAP.md
scripts/analysis/: pca_data_analysis.py
scripts/annotations/: birthday_check.py  read_json.py
scripts/audio/: add_audio_to_video.py  draw_audio_wave.py
scripts/gpu/: test_gpu.py
scripts/image/: convert_jpg_to_png.py  convert_png_to_jpg.py  create_images.py  crop_to_target_size.py  enhance_pose_image.py  extract_entity_from_mask.py  frame_to_gif.py  gif_to_frames.py  image_gaussian_blur.py  merge_gifs.py  merge_images.py  merge_random_images.py  resize_image.py  split_merged_image.py
scripts/image_processing/: blur_wavelet.py  discrete_wavelet_transform.py  hand_detection.py  optical_flow_motion_selector.py
scripts/misc/: meal_picker.py  smoke_test.py
scripts/optical_flow/: draw_optical_flow.py  optical_flow_between_images.py
scripts/process/: multi_process_cpu.py  multi_process_cpu_clear.py  multi_process_gpu.py  multi_process_gpu_clear.py  process_function.py
scripts/video/: blacken_video_edges.py  crop_video_center.py  enhance_pose_video.py  frames_to_video.py  media_to_frames.py  merge_image_and_video.py  merge_two_frame_folders_to_video.py  merge_videos_grid.py  merge_videos_side_by_side.py  resize_video.py  split_video.py  split_videos_in_half.py  video_to_audio.py  video_to_gif.py
scripts/visualization/: draw_grouped_bar.py  draw_video_temporal.py  draw_word_cloud.py
toolbox/: __init__.py  versioning.py
(+37 files in other folders)
